--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --no-error-on-unmatched-pattern --config ./.prettierrc.json",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\" --no-error-on-unmatched-pattern --config ./.prettierrc.json",
     "prepush": "pnpm run lint && pnpm run format",
     "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
