--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,9 @@
 {
+  "endOfLine": "lf",
   "semi": false,
-  "tabWidth": 4,
-  "printWidth": 100,
+  "tabWidth": 2,
+  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "none"
+  "jsxSingleQuote": true,
+  "trailingComma": "es5"
 }
