--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,8 @@
   "semi": false,
   "tabWidth": 2,
   "printWidth": 80,
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "trailingComma": "es5"
+  "singleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "proseWrap": "always"
 }
