--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\" --no-error-on-unmatched-pattern --config ./.prettierrc.json",
-    "prepush": "npm run lint && npm run format",
+    "prepush": "pnpm run lint && pnpm run format",
     "preview": "vite preview"
   },
   "dependencies": {
