--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-radar": "^0.9.6"
   }
 }
